--- a/deep_lab.html
+++ b/deep_lab.html
@@ -14,7 +14,7 @@
 
 
     <input type="file" id="imagenInput" accept="image/*" onchange="cargarImagen(event)">
-    <img id="imagenMostrada" src="" alt="Imagen cargada">
+    <img id="imagenMostrada" src="" alt="">
     <canvas id="imgSaquese"></canvas>
     <canvas id="imgSaquese2"></canvas>
     <select id="mySelect">
