--- a/deep_lab.html
+++ b/deep_lab.html
@@ -31,7 +31,11 @@
         <p style="display: inline-block;" id="estado">Sin carga</p>
     </div>
     <canvas id="imgSaquese2" style="display: flex;margin: .3rem auto; gap:3rem; width: min-content;"></canvas>
-    <div id="colores" style="display: flex;margin: .3rem auto; gap:3rem; width: min-content;"></div>
+    <!--  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto); -->
+    <div id="colores" style="display: grid;margin: .3rem auto; grid-gap:3rem; width: min-content;grid-template-columns: repeat(3, 1fr);grid-auto-rows: minmax(100px,auto);"></div>
     <script>
         function cargarImagen(event) {
             var input = event.target;
