grid y msj aviso

--- a/deep_lab.html
+++ b/deep_lab.html
@@ -95,7 +95,7 @@
 
         async function Pintado(canvas, modelName = "pascal") {
             const estado = document.getElementById('estado')
-            estado.innerHTML = "";
+            estado.innerHTML = "Analizando imagen";
 
             const startTime = performance.now();
 
